--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMz2c2G27XbmdSnYLqMcB6u",
+      "authorship_tag": "ABX9TyOgGzkSL3VenX2NKd3MGDTv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -562,7 +562,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_pivoted = df.pivot(index='rownames', columns='visits', values='children')\n",
+        "df_pivoted = df.pivot(index='rownames', columns='visits', values='school')\n",
         "\n",
         "# Check the result\n",
         "print(df_pivoted.head(3))\n"
@@ -572,19 +572,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S4MEe5gQ65mt",
-        "outputId": "a918bb1b-1d44-408a-c8e0-80f6aa23d15b"
+        "outputId": "19078d11-bdb4-4840-c219-4149454741d5"
       },
-      "execution_count": 52,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "visits     0    1   2   3   4   5   6   7   8   9   10  11  12  13  14  15  \\\n",
-            "rownames                                                                     \n",
-            "1         1.0  NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN   \n",
-            "2         NaN  3.0 NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN   \n",
-            "3         4.0  NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN   \n",
+            "visits      0     1   2   3   4   5   6   7   8   9   10  11  12  13  14  15  \\\n",
+            "rownames                                                                       \n",
+            "1         13.0   NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN   \n",
+            "2          NaN  11.0 NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN   \n",
+            "3         12.0   NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN   \n",
             "\n",
             "visits    16  24  48  50  \n",
             "rownames                  \n",
