--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgGzkSL3VenX2NKd3MGDTv",
+      "authorship_tag": "ABX9TyMylQ6S0ggdReaO8QyGLM3o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,6 +88,56 @@
           "name": "stdout",
           "text": [
             "Dimensions: (996, 15)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Information of the dataset\n",
+        "print(\"Info:\", df.info)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nyW6ro9jBodg",
+        "outputId": "0a22d15e-1514-459b-9f58-429c74c42424"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Info: <bound method DataFrame.info of      rownames  visits  exposure  children  age  income  health1  health2  \\\n",
+            "0           1       0       100         1   24  14.500    0.495   -0.854   \n",
+            "1           2       1        90         3   19   6.000    0.520   -0.969   \n",
+            "2           3       0       106         4   17   8.377   -1.227    0.317   \n",
+            "3           4       0       114         2   29   6.000   -1.524    0.457   \n",
+            "4           5      11       115         1   26   8.500    0.173   -0.599   \n",
+            "..        ...     ...       ...       ...  ...     ...      ...      ...   \n",
+            "991       992       0       106         0   65   8.500   -2.264    0.347   \n",
+            "992       993       1       107         0   90   9.660    1.532    0.455   \n",
+            "993       994      10       116         1   70   6.000    2.660   -0.723   \n",
+            "994       995       3       118         0   73   6.000    0.813    0.056   \n",
+            "995       996       0       115         2   71  10.444   -2.113    0.236   \n",
+            "\n",
+            "     access married  gender ethnicity  school enroll program  newincome  \n",
+            "0      0.50      no  female      cauc      13    yes    afdc  Very High  \n",
+            "1      0.17      no  female      cauc      11    yes    afdc        Low  \n",
+            "2      0.42      no  female      cauc      12    yes    afdc     Medium  \n",
+            "3      0.33      no  female      cauc      12    yes    afdc        Low  \n",
+            "4      0.67      no  female      cauc      16    yes    afdc     Medium  \n",
+            "..      ...     ...     ...       ...     ...    ...     ...        ...  \n",
+            "991    0.33     yes    male      cauc       8     no     ssi     Medium  \n",
+            "992    0.50     yes    male      cauc       0     no     ssi       High  \n",
+            "993    0.17      no  female      cauc       8     no     ssi        Low  \n",
+            "994    0.17      no  female      cauc      12     no     ssi        Low  \n",
+            "995    0.42     yes    male     other      14     no     ssi       High  \n",
+            "\n",
+            "[996 rows x 16 columns]>\n"
           ]
         }
       ]
